Added alt to images and closed open links

--- a/classes/class2-3_years/index.html
+++ b/classes/class2-3_years/index.html
@@ -91,9 +91,9 @@
                     </ul>
                 </div>
                 <div class="toddler-img-container">
-                    <img class="toddler-img" src="/img/crayons.jpg" alt="autumn themed crafts">
-                    <img class="toddler-img" src="/img/outdoor_play.jpg" alt="autumn themed crafts">
-                    <img class="toddler-img" src="/img/drawing.jpg" alt="autumn themed crafts">
+                    <img class="toddler-img slide-in from-right" src="/img/crayons.jpg" alt="autumn themed crafts">
+                    <img class="toddler-img slide-in from-right" src="/img/outdoor_play.jpg" alt="autumn themed crafts">
+                    <img class="toddler-img slide-in from-right" src="/img/drawing.jpg" alt="autumn themed crafts">
                 </div>
             </div>
 
