--- a/classes/class3-4_years/index.html
+++ b/classes/class3-4_years/index.html
@@ -106,8 +106,9 @@
                 </ul>
             </div>
             <div class="class3-4-img-wrapper">
-                <img class="class3-4-img" src="/img/drawing_2.jpg" alt="child drawing a butterfly">
-                <img class="class3-4-img" src="/img/child-reading.jpg" alt="child reading side view">
+                <img class="class3-4-img slide-in from-right" src="/img/drawing_2.jpg" alt="child drawing a butterfly">
+                <img class="class3-4-img slide-in from-right" src="/img/child-reading.jpg"
+                    alt="child reading side view">
             </div>
         </div>
     </section>
