--- a/classes/class4months/index.html
+++ b/classes/class4months/index.html
@@ -91,7 +91,8 @@
                             convenience and peace of mind.</strong></p>
                 </div>
                 <div>
-                    <img class="baby-img" src="/img/christian-bowen-OJOE587CWuE-unsplash.jpg" alt="baby class" />
+                    <img class="baby-img slide-in from-right" src="/img/christian-bowen-OJOE587CWuE-unsplash.jpg"
+                        alt="baby class" />
                 </div>
             </div>
         </section>
