--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://kit.fontawesome.com/8e3a662c3c.js" crossorigin="anonymous"></script>
     <!--Scripts-->
     <script src="/script.js" defer></script>
+    <!--Favicon-->
+    <link rel="icon" type="image/jpeg" href="/img/favicon.jpg">
     <title>Phanita's Baby Club</title>
 </head>
 
@@ -73,7 +75,7 @@
                         home
                     </h3>
                     <p data-i18n="hero_p1">OPEN MONDAY-FRIDAY</p>
-                    <P data-i18n="hero_p2">6.45AM - 17.00PM</P>
+                    <P data-i18n="hero_p2">6.45am - 17.00pm</P>
                     <a class="phone-number" href="tel:+0035799578375" data-i18n="phone">(00357) 99 578 375</a>
                     <address class="address" data-i18n="address">
                         11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol
@@ -84,7 +86,7 @@
                     <a class="phone hero-cta" href="tel:+35799578375" data-i18n="hero_cta_text">Talk to Us Today</a>
                 </div>
                 <div class="hero-img-container">
-                    <img class="hero-img" src="./img/freetime-jam-Js_SgE4ekqc-unsplash.jpg"
+                    <img class="hero-img fade-in slide-in from-right" src="./img/freetime-jam-Js_SgE4ekqc-unsplash.jpg"
                         alt="little girl playing with building blocks">
                 </div>
             </div>
@@ -118,7 +120,8 @@
                         space of coexistence, collaboration, creation, sharing, love, offering...</p>
                 </div>
                 <div>
-                    <img class="about-us-img" src="img/children-scribble.jpg" alt="children scribbling">
+                    <img class="about-us-img fade-in slide-in from-right" src="img/children-scribble.jpg"
+                        alt="children scribbling">
                 </div>
             </div>
         </section>
@@ -127,7 +130,7 @@
         <section class="our-goals">
             <h2 class="why-us-title" data-i18n="why_us">Why Us</h2>
             <div class="card-container">
-                <div class="card">
+                <div class="card slide-in from-right">
                     <div class="card-img">
                         <img src="./img/play-dough.jpg" alt="playdough">
                     </div>
@@ -143,7 +146,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card slide-in from-right">
                     <div class="card-img">
                         <img src="./img/boy-building-blocks.jpg" alt="boy playing with building blocks">
                     </div>
@@ -159,7 +162,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card slide-in from-right">
                     <div class="card-img">
                         <img src="./img/foot-print.jpg" alt="childs footprint">
                     </div>
@@ -176,6 +179,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
 
         </section>
 
@@ -184,20 +188,23 @@
             <div class="content-wrapper">
                 <h2 class="class-title" data-i18n="our_classes">Our Classes</h2>
                 <div class="class-card-container">
-                    <div class="class-card">
-                        <img class="class-img" src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
+                    <div class="class-card slide-in from-left">
+                        <img class="class-img" src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg"
+                            alt="baby chewing play bricks">
                         <h3 data-i18n="class1_age">4 Months - 2 Years</h3>
                         <button class="classBtn" data-i18n="learn_more">Learn More</button>
                     </div>
 
-                    <div class="class-card">
-                        <img class="class-img" src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
+                    <div class="class-card  slide-in from-left">
+                        <img class="class-img" src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg"
+                            alt="toddler with camera">
                         <h3 data-i18n="class2_age">2-3 Years</h3>
                         <button class="classBtn" data-i18n="learn_more">Learn More</button>
                     </div>
 
-                    <div class="class-card">
-                        <img class="class-img" src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
+                    <div class="class-card  slide-in from-left">
+                        <img class="class-img" src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg"
+                            alt="teacher and students drawing">
                         <h3 data-i18n="class3_age">3-4 & 4-5 Years</h3>
                         <button class="classBtn" data-i18n="learn_more">Learn More</button>
                     </div>
@@ -217,10 +224,10 @@
                     <li class="footer-item">
                         <i class="fa-solid fa-location-dot icon"></i>
                         <a href="https://www.google.com/maps?q=11+Aristotelous+Street,+Agios+Sylas+4193,+Ypsonas,+Limassol"
-                            target="_blank">
-                            <address class="footer-address" data-i18n="address">
-                                11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
-                            </address>
+                            target="_blank"></a>
+                        <address class="footer-address" data-i18n="address">
+                            11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
+                        </address>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope icon"></i>
