--- a/our_school/index.html
+++ b/our_school/index.html
@@ -76,12 +76,12 @@
                         <p data-i18n="our_school_paragraph2">To ensure their safety, the entire outdoor area is
                             equipped...</p>
                     </div>
-                    <div class="playground-img-wrapper">
+                    <div class="playground-img-wrapper  slide-in from-right">
                         <img class="playground-img" src="/img/slide.jpg" alt="our play ground">
                     </div>
                 </div>
                 <div class="classroom">
-                    <div class="class-img-wrapper">
+                    <div class="class-img-wrapper  slide-in from-left">
                         <img class="classroom-img" src="/img/classroom.jpg" alt="our class room">
                     </div>
                     <div class="class-play-text">
@@ -107,7 +107,9 @@
                 <div class="calendar">
                     <h2 data-i18n="calendar_title">Calendar</h2>
                     <img class="school-calendar" src="/img/calendar_english.png" alt="school calendar">
-                    <a class="calendar-link" href="" data-i18n="calendar_download">Download Calendar</a>
+                    <a class="calendar-link"
+                        href="https://drive.google.com/file/d/1ldu3Jkst7LyjRend6hBx-h5WmMP1ejeZ/view?usp=sharing"
+                        data-i18n="calendar_download">Download Calendar</a>
                 </div>
             </div>
         </section>
@@ -121,7 +123,7 @@
                         <p data-i18n="meals_paragraph">Once your little one turns one, they’ll enjoy a delicious,
                             freshly cooked lunch...</p>
                     </div>
-                    <div class="meal-img-wrapper">
+                    <div class="meal-img-wrapper slide-in from-right">
                         <img class="meals-img" src="../img/ryna-studio-70BtWz4uSS8-unsplash.jpg" alt="school-meals">
                     </div>
                 </div>
@@ -142,10 +144,10 @@
                     <li class="footer-item">
                         <i class="fa-solid fa-location-dot icon"></i>
                         <a href="https://www.google.com/maps?q=11+Aristotelous+Street,+Agios+Sylas+4193,+Ypsonas,+Limassol"
-                            target="_blank">
-                            <address class="footer-address" data-i18n="address">
-                                11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
-                            </address>
+                            target="_blank"></a>
+                        <address class="footer-address" data-i18n="address">
+                            11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
+                        </address>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope icon"></i>
